fix for copy file issue of Preventel backgroundprocess